--- a/shell/.vscode/settings.json
+++ b/shell/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "signal.h": "c"
+        "signal.h": "c",
+        "stdio.h": "c",
+        "minishell.h": "c"
     }
 }
